apps/demo35/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo35
  namespace: demo35
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo35
  template:
    metadata:
      labels:
        app: demo35
    spec:
      containers:
        - name: demo35
          image: 490529426410.dkr.ecr.us-east-1.amazonaws.com/demo35:6e227af9227eaf6d38358863d365e0e51c4ee66c
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
