apps/demo35/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo35
  namespace: demo35
spec:
  selector:
    app: demo35
  ports:
    - port: 80
      targetPort: 8080
