apps/demo35/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo35
  namespace: demo35
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
              - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo35
                port:
                  number: 80
